Agregado estilo y capacidad de recuperar contacto eliminado

--- a/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
+++ b/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
@@ -52,17 +52,17 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="vBoxAgenda" maxHeight="720.0" maxWidth="900.0" minHeight="685.0" minWidth="900.0" prefHeight="685.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.agenda.ContactosController">
+<VBox fx:id="vBoxAgenda" maxHeight="720.0" maxWidth="900.0" minHeight="685.0" minWidth="900.0" prefHeight="685.0" prefWidth="900.0" style="-fx-background-color: #0f4f75;" stylesheets="@../../../estilo.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.agenda.ContactosController">
   <children>
       <VBox alignment="CENTER" prefHeight="32.0" prefWidth="900.0">
          <children>
-            <Label alignment="CENTER" prefHeight="14.0" prefWidth="106.0" text="Agenda de contactos">
+            <Label alignment="CENTER" prefHeight="14.0" prefWidth="106.0" style="-fx-text-fill: #ffffff;" text="Agenda de contactos">
                <font>
                   <Font name="Franklin Gothic Medium" size="11.0" />
                </font></Label>
          </children>
       </VBox>
-    <SplitPane dividerPositions="0.2984409799554566" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0">
+    <SplitPane dividerPositions="0.29287305122494434" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #b8d3e3;">
       <items>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
@@ -95,9 +95,9 @@
                         </Button>
                      </children>
                   </HBox>
-                  <ScrollPane fitToHeight="true" minHeight="45.0">
+                  <ScrollPane fitToHeight="true" minHeight="65.0" prefHeight="65.0" style="-fx-background-color: #156ea2;" vbarPolicy="NEVER">
                      <content>
-                        <HBox fx:id="tagsHBox" />
+                        <HBox fx:id="tagsHBox" alignment="CENTER" style="-fx-background-color: #156ea2;" />
                      </content>
                   </ScrollPane>
                   <Button fx:id="upContactsButton" disable="true" mnemonicParsing="false" onAction="#retrocederContactos">
@@ -153,7 +153,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <MenuButton fx:id="MenuOrdenar" mnemonicParsing="false" popupSide="RIGHT" prefHeight="48.0" prefWidth="116.0" text="Ordenar">
+                        <MenuButton fx:id="MenuOrdenar" mnemonicParsing="false" popupSide="RIGHT" prefHeight="48.0" prefWidth="116.0" style="-fx-background-color: #156ea2;" text="Ordenar">
                            <items>
                               <MenuItem fx:id="ItemNombre" mnemonicParsing="false" onAction="#OrdenarNombre" text="Nombre" />
                               <MenuItem fx:id="ItemApellido" mnemonicParsing="false" onAction="#OrdenarApellido" text="Apellido" />
@@ -172,9 +172,9 @@
                   </HBox>
                </children>
             </VBox>
-            <ScrollPane fitToHeight="true" fitToWidth="true">
+            <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER">
                <content>
-                  <VBox fx:id="vBoxContatoMuestra" alignment="TOP_CENTER" prefHeight="790.0" prefWidth="663.0">
+                  <VBox fx:id="vBoxContatoMuestra" alignment="TOP_CENTER" prefHeight="790.0" prefWidth="663.0" style="-fx-background-color: #ffffff;">
                      <children>
                         <AnchorPane fx:id="anchorPaneContac">
                            <children>
@@ -349,8 +349,20 @@
             </ScrollPane>
       </items>
     </SplitPane>
-      <VBox alignment="CENTER_RIGHT" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: #0f4f75;">
+      <HBox alignment="TOP_RIGHT">
          <children>
+            <Button fx:id="recuperarContactosButton" disable="true" mnemonicParsing="false" onAction="#recuperarContactoEliminado" prefHeight="32.0" prefWidth="270.0" text="Recuperar contacto eliminado">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../img/recover.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <HBox.margin>
+                  <Insets right="508.0" />
+               </HBox.margin>
+            </Button>
             <Button fx:id="btnSalir" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#cerrarSesion" style="-fx-background-color: transparent;" text="Cerrar Sesion" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="150.0" fitWidth="25.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
@@ -364,6 +376,6 @@
                </font>
             </Button>
          </children>
-      </VBox>
+      </HBox>
   </children>
 </VBox>
