--- a/agenda/src/main/resources/estilo.css
+++ b/agenda/src/main/resources/estilo.css
@@ -1,5 +1,6 @@
 .label {
     -fx-text-fill: #0a386e;
+    -fx-font-family: "Franklin Gothic Medium";
 }
 
 #cajaContacto {
@@ -13,6 +14,11 @@
     -fx-font-size: 16px;
     -fx-background-radius: 2 2 2 2;
     -fx-border-radius: 2 2 2 2;
+}
+
+#labelCajaContacto {
+-fx-font-family: "Franklin Gothic Book";
+-fx-text-fill: #000000;
 }
 
 #labelCajaContacto:hover{
@@ -30,7 +36,7 @@
 }
 
 .button:hover { -fx-background-color: #5a88be;
-               -fx-font-size: 16px;
+               -fx-font-size: 13px;
 }
 
 .button:pressed { -fx-background-color: #517196;
