--- a/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
+++ b/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
@@ -56,13 +56,13 @@
   <children>
       <VBox alignment="CENTER" prefHeight="32.0" prefWidth="900.0">
          <children>
-            <Label alignment="CENTER" prefHeight="14.0" prefWidth="106.0" style="-fx-text-fill: #ffffff;" text="Agenda de contactos" textFill="WHITE">
+            <Label alignment="CENTER" prefHeight="14.0" prefWidth="106.0" style="-fx-text-fill: #ffffff;" text="Agenda de contactos">
                <font>
                   <Font name="Franklin Gothic Medium" size="11.0" />
                </font></Label>
          </children>
       </VBox>
-    <SplitPane dividerPositions="0.29287305122494434" prefHeight="-1.0" prefWidth="-1.0">
+    <SplitPane dividerPositions="0.29287305122494434" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #b8d3e3;">
       <items>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
@@ -80,9 +80,6 @@
                                  </cursor>
                               </ImageView>
                            </graphic>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
                         </Button>
                         <Button maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#busquedaAvanzada" prefHeight="32.0" prefWidth="32.0">
                            <graphic>
@@ -95,15 +92,12 @@
                                  </cursor>
                               </ImageView>
                            </graphic>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
                         </Button>
                      </children>
                   </HBox>
-                  <ScrollPane fitToHeight="true" minHeight="65.0" prefHeight="65.0" vbarPolicy="NEVER">
+                  <ScrollPane fitToHeight="true" minHeight="65.0" prefHeight="65.0" style="-fx-background-color: #156ea2;" vbarPolicy="NEVER">
                      <content>
-                        <HBox fx:id="tagsHBox" alignment="CENTER" style="-fx-background-color: #0f4f75;" />
+                        <HBox fx:id="tagsHBox" alignment="CENTER" style="-fx-background-color: #156ea2;" />
                      </content>
                   </ScrollPane>
                   <Button fx:id="upContactsButton" disable="true" mnemonicParsing="false" onAction="#retrocederContactos">
@@ -111,7 +105,7 @@
                         <Font size="18.0" />
                      </font>
                      <graphic>
-                        <ImageView fitHeight="32.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../img/up.png" />
                            </image>
@@ -135,7 +129,7 @@
                         <Font size="18.0" />
                      </font>
                      <graphic>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="150.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../img/down.png" />
                            </image>
@@ -159,7 +153,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <MenuButton fx:id="MenuOrdenar" mnemonicParsing="false" popupSide="RIGHT" prefHeight="48.0" prefWidth="116.0" text="Ordenar">
+                        <MenuButton fx:id="MenuOrdenar" mnemonicParsing="false" popupSide="RIGHT" prefHeight="48.0" prefWidth="116.0" style="-fx-background-color: #156ea2;" text="Ordenar">
                            <items>
                               <MenuItem fx:id="ItemNombre" mnemonicParsing="false" onAction="#OrdenarNombre" text="Nombre" />
                               <MenuItem fx:id="ItemApellido" mnemonicParsing="false" onAction="#OrdenarApellido" text="Apellido" />
@@ -173,9 +167,6 @@
                                  </image>
                               </ImageView>
                            </graphic>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
                         </MenuButton>
                      </children>
                   </HBox>
@@ -371,9 +362,6 @@
                <HBox.margin>
                   <Insets right="508.0" />
                </HBox.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
             </Button>
             <Button fx:id="btnSalir" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#cerrarSesion" style="-fx-background-color: transparent;" text="Cerrar Sesion" textFill="WHITE">
                <graphic>
@@ -386,9 +374,6 @@
                <font>
                   <Font name="Franklin Gothic Medium" size="13.0" />
                </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
             </Button>
          </children>
       </HBox>
